fix: Add jquery script to product details to enable toasts to display over carousel on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -184,6 +184,10 @@ footer {
 /*-------------------W3 SCHOOLS- contribution end ---------------------*/
 
 /* -------------------PRODUCT DETAILS--------------------- */
+.toast-display-over {
+    z-index: -1;
+}
+
 .button-secondary-style {
     background-color: #f5f5f5;
     color: #121212;
@@ -207,11 +211,8 @@ footer {
 }
 
 /* -------------------TOASTS--------------------- */
-.message-container {
-    position: fixed;
-    top: 72px;
-    right: 15px;
-    z-index: 99999999999;
+.toast {
+    z-index: 99999999999; 
 }
 
 .custom-toast {
